RESOLVED FIXED303580
[blocks-in-inline] Fix editing/pasteboard/drag-drop-list.html
https://bugs.webkit.org/show_bug.cgi?id=303580
Summary [blocks-in-inline] Fix editing/pasteboard/drag-drop-list.html
alan
Reported 2025-12-04 15:27:42 PST
ssia
Attachments
Patch (3.62 KB, patch)
2025-12-04 16:18 PST, alan
ews-feeder: commit-queue-
alan
Comment 1 2025-12-04 16:18:10 PST
EWS
Comment 2 2025-12-04 22:07:06 PST
Committed 303960@main (cc074d5b9122): <https://commits.webkit.org/303960@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477618 [details].
Radar WebKit Bug Importer
Comment 3 2025-12-04 22:08:13 PST
Note You need to log in before you can comment on or make changes to this bug.