[blocks-in-inline] Fix editing/pasteboard/drag-drop-list.html https://bugs.webkit.org/show_bug.cgi?id=303580

Reviewed by Antti Koivisto.

Test: fast/inline/blocks-in-inline-list-item-collapse.html

* LayoutTests/fast/inline/blocks-in-inline-list-item-collapse-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-list-item-collapse.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineQuirks.cpp:
(WebCore::Layout::InlineQuirks::shouldCollapseLineBoxHeight const):

Canonical link: https://commits.webkit.org/303960@main