Source/WebCore/layout/formattingContexts/inline/InlineQuirks.cpp
@@ -218,9 +218,14 @@ bool InlineQuirks::shouldCollapseLineBoxHeight(const Line::RunList& lineContent,
         return false;
     }
 
-    auto& rootBox = formattingContext().root();
-    if (rootBox.isAnonymous() || rootBox.isListItem())
-        return false;
+    if (lineContent.size() == 2 && lineContent[0].isListMarkerOutside() && lineContent[1].isInlineBoxStart()) {
+        // This is to handle non-contentful lines introduced by block boxes. They are supposed to be collapsed so that
+        // the block content can be placed next to the list marker.
+        // Regular inline content would never produced a line with these 2 runs. Also in inline content like <li><span><br>
+        // is not supposed to produce a collapsed line box.
+        // The underlying issue is the assumption that we shouldn’t collapse when rootBox is a list item (see below).
+        return true;
+    }
 
     for (auto& run : lineContent) {
         if (run.isListMarkerOutside())
@@ -228,6 +233,11 @@ bool InlineQuirks::shouldCollapseLineBoxHeight(const Line::RunList& lineContent,
         if (Line::Run::isContentfulOrHasDecoration(run, formattingContext()))
             return false;
     }
+
+    auto& rootBox = formattingContext().root();
+    if (rootBox.isAnonymous() || rootBox.isListItem())
+        return false;
+
     return true;
 }
 
